--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,24 @@
 main{
-  .pokemon{
+  .poke-card{
+    border: 2px solid red;
+    padding: 10px;
+    background-color: white;
+    border-radius: 25px;
+  }
+  .poke-stock{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
+    background-color: #c7c7c7;
+    padding: 40px;
+  }
+  .deck{
+    display: flex;
+    height: 200px;
+    border: 2px solid red;
+    margin: 25px;
+    background-color: white;
+    border-radius: 25px;
   }
 }
