--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Gill Sans", sans-serif;
 }
 
 main .poke-card {
-  border: 2px solid red;
+  border-width: 5px;
+  border-style: solid;
   padding: 10px;
   background-color: white;
-  border-radius: 25px;
+  border-radius: 15px;
   height: 175px;
   cursor: grab;
 }
@@ -25,7 +27,7 @@ main .poke-stock {
   flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
-  background-color: #c7c7c7;
+  background-color: #815757;
   padding: 40px;
 }
 main .deck {
@@ -37,6 +39,12 @@ main .deck .cell {
   background-color: white;
   border: 5px solid gray;
   width: 100%;
+}
+main .search {
+  display: flex;
+  padding: 30px;
+  justify-content: center;
+  gap: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
