--- a/style.scss
+++ b/style.scss
@@ -2,14 +2,16 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'Gill Sans', sans-serif;
 }
 
 main{
   .poke-card{
-    border: 2px solid red;
+    border-width: 5px;
+    border-style: solid;
     padding: 10px;
     background-color: white;
-    border-radius: 25px;
+    border-radius: 15px;
     height: 175px;
     cursor: grab;
     .img-container{
@@ -26,7 +28,7 @@ main{
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
-    background-color: #c7c7c7;
+    background-color: #815757;
     padding: 40px;
   }
   .deck{
@@ -38,5 +40,11 @@ main{
       border: 5px solid gray;
       width: 100%;
     }
+  }
+  .search{
+    display: flex;
+    padding: 30px;
+    justify-content: center;
+    gap: 10px;
   }
 }
