--- a/style.scss
+++ b/style.scss
@@ -31,14 +31,51 @@ main{
     background-color: #815757;
     padding: 40px;
   }
+
+  .hud{
+    //contains deck & trash
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: fit-content;
+    margin: 25px auto;
+    gap: 30px;
+  }
+
+  .trash{
+    height: 100px;
+    width: 100px;
+    img{
+      height: 100%;
+      width: 100%;
+    }
+  }
+
   .deck{
     display: flex;
-    height: 200px;
-    margin: 25px;
+    gap: 10px;
+    flex-wrap: wrap;
+    height: 100px;
+    width: fit-content;
     .cell{
       background-color: white;
-      border: 5px solid gray;
-      width: 100%;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.23);
+      width: 100px;
+      .poke-card{
+        border-radius: 0;
+        border-width: 0 0 10px 0;
+        background: transparent;
+        p{
+          display: none;
+        }
+        padding: 0;
+        height: 100px;
+        width: 100%;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
     }
   }
   .search{
