--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main .poke-card p {
   padding: 40px;
 }
 
-main .hud {
+.hud {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,32 +40,32 @@ main .hud {
   margin: 25px auto;
   gap: 30px;
 }
-main .trash {
+
+.trash {
   height: 100px;
   width: 100px;
 }
-main .trash img {
+.trash img {
   height: 100%;
   width: 100%;
 }
-main .deck {
+
+.deck {
   display: none;
   gap: 10px;
   flex-wrap: wrap;
   height: 100px;
   width: fit-content;
 }
-main .deck.active {
-
+.deck.active {
   display: flex;
 }
-
-main .deck .cell {
-  background-color: white;
+.deck .cell {
+  kground-color: white;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.23);
   width: 100px;
 }
-main .deck .cell .poke-card {
+.deck .cell .poke-card {
   border-radius: 0;
   border-width: 0 0 10px 0;
   background: transparent;
@@ -73,16 +73,12 @@ main .deck .cell .poke-card {
   height: 100px;
   width: 100%;
 }
-main .deck .cell .poke-card p {
+.deck .cell .poke-card p {
   display: none;
 }
-main .deck .cell .poke-card img {
-
+.deck .cell .poke-card img {
   width: 100%;
   height: 100%;
-}
-.deck .cell .poke-card {
-  background-color: red;
 }
 
 .search {
