--- a/style.scss
+++ b/style.scss
@@ -22,13 +22,14 @@ h1{
   width: fit-content;
   margin: 0 auto;
   display: flex;
+  gap: 50px;
   .column{
     width: 500px;
-
   }
 }
 
 main{
+  position: relative;
   .poke-card{
     border-width: 5px;
     border-style: solid;
@@ -53,13 +54,21 @@ main{
     gap: 10px;
     padding: 40px;
   }
+  .sticky{
+    top: 0;
+    z-index: 10;
+    background-color: white;
+    position: sticky;
+    padding: 30px 0;
+    margin-bottom: 25px;
+  }
   .hud{
     //contains deck & trash
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: fit-content;
-    margin: 25px auto;
+    margin: 0 auto;
     gap: 30px;
   }
   .trash{
@@ -84,9 +93,15 @@ main{
       box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.23);
       width: 100px;
       .poke-card{
+        position: relative;
         border-radius: 0;
         border-width: 0 0 10px 0;
         background: transparent;
+        img.info{
+          position: absolute;
+          top: 5px;
+          left: 5px;
+        }
         p{
           display: none;
         }
@@ -110,9 +125,57 @@ main{
   }
 
   .benchmark{
+    position: relative;
+    border: 5px solid yellow;
+    border-radius: 30px;
+    overflow: clip;
+    padding-bottom: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.37);
+    &::before{
+      content: "Team Rank";
+      color: black;
+      display: block;
+      text-align: center;
+      padding: 20px;
+      font-size: 2em;
+    }
+
+    h2#score{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 4em;
+      text-shadow: 5px 5px 0 black;
+      text-align: center;
+      height: 80px;
+      width: 80px;
+      font-weight: bold;
+    }
+
+    @keyframes bounce {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.3);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+    canvas{
+      background-color: white;
+      display: block;
+      margin: 25px auto;
+      border: 5px inset gold;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    }
+
     table.stat{
-      margin: 10px auto;
+      background-color: white;
       border: 1px solid black;
+      caption-side: bottom;
+      width: 180px;
       th{
         &[scope='col']{
           background-color: black;
@@ -133,17 +196,29 @@ main{
         font-size: 0.8em;
       }
     }
-    p.teamTypes > span {
-      display: inline-block;
-      margin: 20px;
-      & > span{
+    div.teamTypes {
+      position: absolute;
+      top: 0;
+      left: 0;
+      span{
+        display: block;
+        width: fit-content;
         padding: 5px;
         border-radius: 5px;
-        margin-left: 5px;
-        margin-right: 5px;
+        margin: 20px;
         color: white;
         text-shadow: 0 0 2px black;
         box-shadow: 0 0 1px black;
+      }
+    }
+    div.capacity{
+      width: 180px;
+      background-color: white;
+      border-radius: 20px;
+      padding: 20px;
+      ul{
+        margin-top: 10px;
+        margin-bottom: 10px;
       }
     }
   }
