--- a/style.css
+++ b/style.css
@@ -31,6 +31,29 @@ h1 {
 main {
   position: relative;
 }
+main #saveCard {
+  display: block;
+  margin: 20px auto;
+  padding: 10px;
+}
+main #saveCard:hover {
+  cursor: pointer;
+}
+main .modal-save-background {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 20;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+main .modal-save-background .modal-save {
+  padding: 20px 50px;
+}
 main .poke-card {
   border-width: 5px;
   border-style: solid;
@@ -77,7 +100,7 @@ main .trash {
 }
 main .trash img {
   height: 100%;
-  width: 100%;
+  aspect-ratio: 1/1;
 }
 main .deck {
   display: none;
