--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,32 @@ h1{
 
 main{
   position: relative;
+
+  #saveCard{
+    display: block;
+    margin: 20px auto;
+    padding: 10px;
+    &:hover{
+      cursor: pointer;
+    }
+  }
+
+  .modal-save-background{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+    .modal-save{
+      padding: 20px 50px;
+    }
+  }
+
   .poke-card{
     border-width: 5px;
     border-style: solid;
@@ -76,7 +102,7 @@ main{
     width: 100px;
     img{
       height: 100%;
-      width: 100%;
+      aspect-ratio: 1/1;
     }
   }
   .deck{
