fix info :lipstick:

--- a/style.css
+++ b/style.css
@@ -88,4 +88,8 @@ main .poke-card p {
   gap: 10px;
 }
 
+.modal-content img:nth-child(2) {
+  margin: -70px 0;
+}
+
 /*# sourceMappingURL=style.css.map */
